# xzxTool

./: README.md  demo.py  gcg.py  pyproject.toml  setup.py  test.py
example/: Llama3.2-11B_test.py  claude2.py  gemini1.5flash_test.py
xzxTool/: chat.py  config.py  op.py  requirement.txt
xzxTool.egg-info/: PKG-INFO  SOURCES.txt
