[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xzxTool"
version = "0.1.2"
authors = [
    { name="Zhixin", email="ZHIXIN001@e.ntu.edu.sg" },
]
description = "For self use"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "transformers>=4.4",
]

[tool.setuptools]
packages = ["xzxTool"]
